	menu, just set it earlier.
	* src/prompt.c (get_prompt_string): Group the arguments better.
	* src/global.c (shortcut_init), src/browser.c (do_filesearch):
	Show that it is possible to have backwards, regular-expressive
	and case-sensitive searching in the file browser.
	* src/browser.c (filesearch_init, do_filesearch): Now delete
	these abilities again and all provisions for them.

2014-06-30  Mark Majeres  <mark@engine12.com>
	* src/cut.c, src/global.c, src/nano.c: Rename 'cut_till_end' to
	'cut_till_eof', and 'do_cut_till_end' to 'do_cut_till_eof', to
	reduce confusion with CUT_TO_END, which is about end-of-line.

2014-06-30  Benno Schulenberg  <bensberg@justemail.net>
	* src/color.c (color_update): When there are no syntaxes, for example
	with --ignorercfiles, do not try to find one, because that would lead
	to the magic database being searched, which slows down startup a lot.
	* src/color.c (color_update): Move some variables to a better place.
	* src/*: Make 'meta_key' and 'func_key' into global variables, instead
	of having them declared everywhere and passing them around endlessly.
	* src/global.c (sc_seq_or): Now fix a bug introduced somewhere after
	2.3.2 where binding a movement function to a Meta key would make the
	corresponding Arrow key stop working (producing a character instead).

2014-06-29  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c: Fix compilation with --enable-tiny --enable-nanorc.
	* src/winio.c (parse_kbinput, get_escape_seq_kbinput): Make Ctrl-Left
	and Ctrl-Right produce special codes, and map these codes to Prevword
	and Nextword instead of reducing them to a plain Left and Right.  The
	codes 539 and 554 were so chosen because some terminals produce these.

2014-06-29  Mark Majeres  <mark@engine12.com>
	* src/text.c (do_undo): Update the pointer to the bottom of the file
	when undoing line deletions at file's end.

2014-06-28  Benno Schulenberg  <bensberg@justemail.net>